Add titles progressions balancing to roles overview

--- a/md/RolesOverview.mdx
+++ b/md/RolesOverview.mdx
@@ -1,3 +1,6 @@
+import RolesDiagram from '../components/RolesDiagram';
+import RoleList from '../components/RoleList';
+
 # Roles and Responsibilities
 
 Roles begin with a shared **Engineer** track and then fork at later levels to the **Individual Contributor** and **People Manager** tracks.
@@ -7,3 +10,20 @@ Roles begin with a shared **Engineer** track and then fork at later levels to th
 **Individual Contributors** are individuals with technical expertise, focused on continuous improvement of their technical skills, leading by example, and developing the team.
 
 **People Managers** are individuals with development and leadership expertise who are focused on leading and growing the team.
+
+<RolesDiagram />
+
+## Tiles and Progression
+Role titles are for you, your manager and the team to understand your expected responsibilities and to track your progress, but you are free to use anything sensible for your outward facing title (e.g. LinkedIn, resume, etc.).
+
+Determining when to progress from one role to the next is a discussion that should happen between you and your manager. As a general guide, performing a significant percentage of the responsibilities of the next role for 3-6 months* would indicate readiness to step into that role.
+
+\* To clarify, this does not mean you should expect to be promoted every 3-6 months.  Especially at higher levels, it could take several years to be able to perform a significant of responsibilities of the next role.
+
+\* Also, the general expectation is that reviews occur once per year so most promotions are expected to occur at that yearly mark.
+
+## Balancing
+When a manager believes their direct report is ready to progress to a new role, they are expected to present their recommendation to a group of their peers in management. The purpose of this process is to ensure fairness and consistency when it comes to progression.
+
+## Role Expectations
+<RoleList />
