Adding function structures

--- a/md/RolesOverview.mdx
+++ b/md/RolesOverview.mdx
@@ -1,5 +1,6 @@
-import RolesDiagram from '../components/RolesDiagram';
+import FunctionList from '../components/FunctionList';
 import RoleList from '../components/RoleList';
+import RolesDiagram from '../components/RolesDiagram';
 
 # Roles and Responsibilities
 
@@ -27,3 +28,7 @@ When a manager believes their direct report is ready to progress to a new role, 
 
 ## Role Expectations
 <RoleList />
+
+## Function Expectations
+Functions describe responsibilities that you may be expected to fulfill for a period of time.
+<FunctionList />
