--- a/md/RolesOverview.mdx
+++ b/md/RolesOverview.mdx
@@ -29,6 +29,6 @@ When a manager believes their direct report is ready to progress to a new role, 
 ## Role Expectations
 <RoleList />
 
-## Function Expectations
+## Functions
 Functions describe responsibilities that you may be expected to fulfill for a period of time.
 <FunctionList />
