Add note about QA Engineers to overview

--- a/md/RolesOverview.mdx
+++ b/md/RolesOverview.mdx
@@ -14,6 +14,10 @@ Roles begin with a shared **Engineer** track and then fork at later levels to th
 
 <RolesDiagram />
 
+## QA Engineers
+
+QA Engineers have similar roles and responsibilities as any other Engineer described in this framework, but QA Engineers who focus on **Manual Testing** have slightly different expectations in the **Technical Excellence** skill. QA Engineers focused on **Automation** are expected to have similar **Technical Excellence** skills as any other Engineer so there are no behavioral distinctions.
+
 ## Tiles and Progression
 Role titles are for you, your manager and the team to understand your expected responsibilities and to track your progress, but you are free to use anything sensible for your outward facing title (e.g. LinkedIn, resume, etc.).
 
