--- a/md/RolesOverview.mdx
+++ b/md/RolesOverview.mdx
@@ -14,7 +14,7 @@ Roles begin with a shared **Engineer** track and then fork at later levels to th
 
 <RolesDiagram />
 
-## Tiles and Progression
+## Titles and Progression
 Role titles are for you, your manager and the team to understand your expected responsibilities and to track your progress, but you are free to use anything sensible for your outward facing title (e.g. LinkedIn, resume, etc.).
 
 Determining when to progress from one role to the next is a discussion that should happen between you and your manager. As a general guide, performing a significant percentage of the responsibilities of the next role for 3-6 months* would indicate readiness to step into that role.
