--- a/md/QARolesOverview.mdx
+++ b/md/QARolesOverview.mdx
@@ -1,3 +1,13 @@
 import QARolesDiagram from '../components/QARolesDiagram';
 
+# Roles and Responsibilities
+
+QA Roles begin with a shared **QA Engineer** track and then fork at later levels to the **QA Automation Engineer** and **People Manager** tracks.
+
+**QA Engineers** are focused on delivering value by testing software as part of the Engineering team.
+
+**QA Automation Engineers** are individuals with technical expertise in testing automation, focused on continuous improvement of their technical skills, leading by example, and developing the automation team.
+
+**People Managers** are individuals with QA and leadership expertise who are focused on leading and growing the QA team.
+
 <QARolesDiagram />
