Move comments on titles and balancing to the main intro

--- a/md/Introduction.mdx
+++ b/md/Introduction.mdx
@@ -1,3 +1,5 @@
+import Link from 'next/link';
+
 # Career Journeys
 At Gloo we believe that every person is on a journey of growth within their life. This journey is multi-faceted and spans every aspect of life.
 
@@ -28,3 +30,20 @@ The purpose of the career journey framework is to:
   (<a target="_blank" rel="noopener noreferrer" href="https://www.forbes.com/sites/workday/2018/08/24/career-sprints-using-agile-development-methods-to-foster-employee-development/#55aadfb355eb">inspired by Workday</a>).
 
 \* There may be special circumstances when a manager can recommend a role change outside of the standard cadence based on exceptional contribution.
+
+## Roles
+
+<div><Link href="/roles"><a>Engineer Roles</a></Link></div>
+<div><Link href="/qa-roles"><a>QA Roles</a></Link></div>
+
+### Titles and Progression
+Role titles are for you, your manager and the team to understand your expected responsibilities and to track your progress, but you are free to use anything sensible for your outward facing title (e.g. LinkedIn, resume, etc.).
+
+Determining when to progress from one role to the next is a discussion that should happen between you and your manager. As a general guide, performing a significant percentage of the responsibilities of the next role for 3-6 months* would indicate readiness to step into that role.
+
+\* To clarify, this does not mean you should expect to be promoted every 3-6 months.  Especially at higher levels, it could take several years to be able to perform a significant of responsibilities of the next role.
+
+\* Also, the general expectation is that reviews occur once per year so most promotions are expected to occur at that yearly mark.
+
+### Balancing
+When a manager believes their direct report is ready to progress to a new role, they are expected to present their recommendation to a group of their peers in management. The purpose of this process is to ensure fairness and consistency when it comes to progression.
