Make these separate exports

--- a/md/QARolesOverview.mdx
+++ b/md/QARolesOverview.mdx
@@ -1,4 +1,4 @@
-import QA_ROLES from '../data/qa-roles';
+import { QA_ROLES_ARRAY } from '../data/qa-roles';
 import RoleList from '../components/RoleList';
 import QARolesDiagram from '../components/QARolesDiagram';
 
@@ -15,4 +15,4 @@ QA Roles begin with a shared **QA Engineer** track and then fork at later levels
 <QARolesDiagram />
 
 ## Role Expectations
-<RoleList roles={QA_ROLES.asArray} />
+<RoleList roles={QA_ROLES_ARRAY} />
