--- a/md/RolesOverview.mdx
+++ b/md/RolesOverview.mdx
@@ -1,4 +1,4 @@
-import ROLES from '../data/roles';
+import { ROLES_ARRAY } from '../data/roles';
 import FunctionList from '../components/FunctionList';
 import RoleList from '../components/RoleList';
 import RolesDiagram from '../components/RolesDiagram';
@@ -16,7 +16,7 @@ Roles begin with a shared **Engineer** track and then fork at later levels to th
 <RolesDiagram />
 
 ## Role Expectations
-<RoleList roles={ROLES.asArray} />
+<RoleList roles={ROLES_ARRAY} />
 
 ## Functions
 Functions describe responsibilities that you may be expected to fulfill for a period of time.
