--- a/md/SkillsOverview.mdx
+++ b/md/SkillsOverview.mdx
@@ -1,3 +1,5 @@
+import { ROLES_ARRAY } from '../data/roles';
+import { QA_ROLES_ARRAY } from '../data/qa-roles';
 import SkillCards from '../components/SkillCards';
 import SkillList from '../components/SkillList';
 
@@ -17,4 +19,9 @@ Below is a list of core characteristics that great teammates should demonstrate 
 **Growth:** You are committed to the growth of yourself and your teammates.
 
 ## Skill Expectations
-<SkillList />
+
+### Engineer Skills
+<SkillList roles={ROLES_ARRAY} />
+
+### QA Skills
+<SkillList roles={QA_ROLES_ARRAY} />
