Anchors for slightly easier skill navigation

--- a/md/SkillsOverview.mdx
+++ b/md/SkillsOverview.mdx
@@ -18,10 +18,16 @@ Below is a list of core characteristics that great teammates should demonstrate 
 
 **Growth:** You are committed to the growth of yourself and your teammates.
 
-## Skill Expectations
+<div className="hidden-anchor-root">
+  <div id="engineers" className="hidden-anchor" />
+</div>
 
-### Engineer Skills
+## Engineer Skills
 <SkillList roles={ROLES_ARRAY} />
 
-### QA Skills
+<div className="hidden-anchor-root">
+  <div id="qa-engineers" className="hidden-anchor" />
+</div>
+
+## QA Engineer Skills
 <SkillList roles={QA_ROLES_ARRAY} />
