Update the definition of QA engineer

--- a/md/QARolesOverview.mdx
+++ b/md/QARolesOverview.mdx
@@ -6,7 +6,7 @@ import QARolesDiagram from '../components/QARolesDiagram';
 
 QA Roles begin with a shared **QA Engineer** track and then fork at later levels to the **QA Automation Engineer** and **People Manager** tracks.
 
-**QA Engineers** are focused on delivering value by testing software as part of the Engineering team.
+**QA Engineers** are focused on delivering value by assuring quality of product and process throughout the product life cycle.
 
 **QA Automation Engineers** are individuals with technical expertise in testing automation, focused on continuous improvement of their technical skills, leading by example, and developing the automation team.
 
