Add separate QA roles (#10)
* Add page for QA Roles

* Adding QA Roles

* QA diagram and styles

* QA Roles and Responsiblities explanation

* Pass roles array down rather than getting it

* Entering the QA expectations

* Reusable role nav

* Adding tech excellence behaviors for QA

* Move comments on titles and balancing to the main intro

* These descriptions arent used

* Make these separate exports

* Show QA skills

* Anchors for slightly easier skill navigation

* Update the definition of QA engineer

* Make this more generic so it works for QA too.

* Remove the word code so this works for QA

* TechEx for QA Auto Eng

* TechEx for Snr QA Auto Eng

* TechEx for Staff QA Auto Eng

* Extra spacing

* Punctuation

* You down with OPP?

--- a/md/SkillsOverview.mdx
+++ b/md/SkillsOverview.mdx
@@ -1,3 +1,5 @@
+import { ROLES_ARRAY } from '../data/roles';
+import { QA_ROLES_ARRAY } from '../data/qa-roles';
 import SkillCards from '../components/SkillCards';
 import SkillList from '../components/SkillList';
 
@@ -16,5 +18,16 @@ Below is a list of core characteristics that great teammates should demonstrate 
 
 **Growth:** You are committed to the growth of yourself and your teammates.
 
-## Skill Expectations
-<SkillList />
+<div className="hidden-anchor-root">
+  <div id="engineers" className="hidden-anchor" />
+</div>
+
+## Engineer Skills
+<SkillList roles={ROLES_ARRAY} />
+
+<div className="hidden-anchor-root">
+  <div id="qa-engineers" className="hidden-anchor" />
+</div>
+
+## QA Engineer Skills
+<SkillList roles={QA_ROLES_ARRAY} />
