add sub nav for skillz

--- a/md/SkillsOverview.mdx
+++ b/md/SkillsOverview.mdx
@@ -23,11 +23,11 @@ Below is a list of core characteristics that great teammates should demonstrate 
 </div>
 
 ## Engineer Skills
-<SkillList roles={ROLES_ARRAY} />
+<SkillList roles={ROLES_ARRAY} team="ENGINEERS"   />
 
 <div className="hidden-anchor-root">
   <div id="qa-engineers" className="hidden-anchor" />
 </div>
 
 ## QA Engineer Skills
-<SkillList roles={QA_ROLES_ARRAY} />
+<SkillList roles={QA_ROLES_ARRAY} team="QA_ENGINEERS" />
