--- a/md/Introduction.mdx
+++ b/md/Introduction.mdx
@@ -41,7 +41,7 @@ Role titles are for you, your manager and the team to understand your expected r
 
 Determining when to progress from one role to the next is a discussion that should happen between you and your manager. As a general guide, performing a significant percentage of the responsibilities of the next role for 3-6 months* would indicate readiness to step into that role.
 
-\* To clarify, this does not mean you should expect to be promoted every 3-6 months.  Especially at higher levels, it could take several years to be able to perform a significant of responsibilities of the next role.
+\* To clarify, this does not mean you should expect to be promoted every 3-6 months.  Especially at higher levels, it could take several years to be able to perform a significant percentage of the responsibilities of the next role.
 
 \* Also, the general expectation is that reviews occur once per year so most promotions are expected to occur at that yearly mark.
 
