Add note about contributions to the app itself

--- a/md/Introduction.mdx
+++ b/md/Introduction.mdx
@@ -47,3 +47,6 @@ Determining when to progress from one role to the next is a discussion that shou
 
 ### Balancing
 When a manager believes their direct report is ready to progress to a new role, they are expected to present their recommendation to a group of their peers in management. The purpose of this process is to ensure fairness and consistency when it comes to progression.
+
+## Contributions & Feedback
+Everyone is encouraged to provide feedback and propose changes to this framework. See the [How to Contribute](https://github.com/TangoGroup/career-journeys#how-to-contribute) section in the GitHub repo to learn more.
